--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <textarea name="" id="" rows="3" required></textarea>
             <label>Mensaje</label>
           </div>
-          <button type="submit">Enviar whatsapp</button>
+          <button type="submit">
+            <i class="fab fa-whatsapp"></i> Enviar WhatsApp
+          </button>
 
           <p>By Yonny</p>
       </div>
