--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.2.0/tailwind.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -16,25 +17,25 @@
   </head>
   <body>
     
-  <form action="">
+  <form action="" id="form">
       <div class="form">
         <h1>Formulario</h1>
 
           <div class="grupo">
-            <input type="text"name="" id="" required><span class="barra"></span>
+            <input type="name_id"name="name_id" id="name_id" required><span class="barra"></span>
             <label>Nombre</label>
           </div>
 
           <div class="grupo">
-            <input type="email"name="" id="" required><span class="barra"></span>
+            <input type="email_id"name="email_id" id="email_id" required><span class="barra"></span>
             <label>Email</label>
           </div>
 
           <div class="grupo">
-            <textarea name="" id="" rows="3" required></textarea>
+            <textarea type="mensaje_id" name="mensaje_id" id="mensaje_id" rows="3" required></textarea>
             <label>Mensaje</label>
           </div>
-          <button type="submit">
+          <button type="submit" id="submit">
             <i class="fab fa-whatsapp"></i> Enviar WhatsApp
           </button>
 
@@ -43,20 +44,14 @@
 
   </form>
 
-
-
-
-
-
-
-
-
-
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="js/envio-mensaje.js"></script>
+    <script src="js/helperts.js"></script>
   </body>
 </html>
